--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Life2</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <div id="life-canvas" style="text-align: center"></div>
   <script src="./life.js"></script>
+  <div id="buttons">
+    <button id="zombie" onclick="life.zombie();">
+      zombie
+    </button>
+    <button id="zombie" onclick="life.randomize();">
+      randomize
+    </button>
+  </div>
 </body>
 
 </html>
